--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
-theme: jekyll-theme-slate
+theme                    : jekyll-theme-slate
+locale                   : "ko-KR"
+title                    : "GCGenome LIMS team tech blog"
+title_separator          : "-"
+name                     : "GCGenome LIMS"
+description              : ""
+url                      : ""
+baseurl                  : "https://gcgenome-lims.github.io/"
