Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ name                     : "GCGenome LIMS"
 description              : ""
 url                      : ""
 baseurl                  : "https://gcgenome-lims.github.io/"
+
+theme: jekyll-theme-slate
