--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-slate
-locale: ko-KR
-title: GCGenome LIMS team tech blog
-title_separator: ""
-name: GCGenome LIMS
+locale: "ko-KR"
+title: "GCGenome LIMS team tech blog"
+name: "GCGenome LIMS"
 baseurl: "https://gcgenome-lims.github.io/"
