--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,21 @@ theme: jekyll-theme-slate
 title: "GCGenome LIMS tech"
 locale: "ko-KR"
 name: "GCGenome LIMS team"
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
