--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,28 @@
 theme: jekyll-theme-slate
-title: "GCGenome LIMS tech"
-locale: "ko-KR"
-name: "GCGenome LIMS team"
+title: GCGenome LIMS tech
+locale: ko-KR
+timezone: Asia/Seoul
+name: GCGenome LIMS team
+permalink: /:year/:month/:day/:title/
+excerpt_separator: <!--more-->
+markdown: kramdown
+krandown:
+  input: GFM
+  highlighter: rouge
+plugins:
+  - jekyll-paginate
+paginate: 5
+paginate_path: '/page/:num/'
+collections:
+  authors:
+    output: true
+    permalink: /authors/:path/
+  tags:
+    output: true
+    permalink: /tags/:path/
 defaults:
-  # _posts
   - scope:
-      path: ""
+      path: ''
       type: posts
     values:
       layout: single
@@ -15,8 +32,15 @@ defaults:
       share: true
       related: true
   - scope:
-      path: "_pages"
+      path: '_pages'
       type: pages
     values:
       layout: single
       author_profile: true
+exclude: [README.md, Gemfile, Gemfile.lock]
+keep_files: [assets, files]
+github: [metadata]
+author: sayaya@gccorp.com
+asset_url: /assets
+github_url:
+  username: GCGenome-LIMS-manager
