--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: GCGenome LIMS Tech
 email: sayaya@gccorp.com
 description: ''
 baseurl: ''
-url: ''
+url: 'https://gcgenome-lims.github.io'
 twitter_username: ''
 github_username: ''
 plugins:
